@@ -253,3 +253,18 @@ class TestRockBuildManagerIteration(TestCase):
             "content_of_cert",
         ]
         yield self.startBuild(args, expected_options)
+
+    @defer.inlineCallbacks
+    def test_iterate_launchpad_url_and_instance(self):
+        # The builder should be aware of the launchpad context.
+        args = {
+            "launchpad_instance": "devel",
+            "launchpad_server_url": "launchpad.test",
+        }
+        expected_options = [
+            "--launchpad-instance",
+            "devel",
+            "--launchpad-server-url",
+            "launchpad.test",
+        ]
+        yield self.startBuild(args, expected_options)
